Date Picker: prevent button defaults and adjust picker z-index

--- a/docs/css/yeti.css
+++ b/docs/css/yeti.css
@@ -311,7 +311,7 @@ A control that helps the user choose a date.
     background-color: white;
     box-shadow: 0 2px 6px #0000004d;
     padding: 0.25rem 0.25rem 0.5rem 0.25rem;
-    z-index: 1;
+    z-index: 2;
   }
   .yeti-date-picker:not(.yeti-date-picker__visible) {
     display: none;
